Plotting the data

--- a/Self-supervised learning.ipynb
+++ b/Self-supervised learning.ipynb
@@ -56,7 +56,33 @@
     "However, in this SSL case study, we will assume that we only know of the sonar what its relation is to height in meters. We will then try to learn to predict the sonar measurements by means of pressure measurements. After learning, the drone can also use the barometer for height estimation. What is special about this case study is that, in contrast to most work on SSL, we will fuse the height estimate from the barometer back with the sonar measurement and see whether the fused estimate is better than sonar alone. In order to determine which is better, we compare the fused estimates with highly accurate motion tracking system estimates (in our case Optitrack). The overview of the learning setup is shown in Figure 3.\n",
     "\n",
     "<IMG SRC=\"overview_fusion.png\" WIDTH=\"70%\"></IMG>\n",
-    "\n"
+    "\n",
+    "Run the cell below to have a look at the data. It imports the Python file <A HREF=\"SSL_drone_data.py\" TARGET=\"_blank\">SSL_drone_data.py</A>, loads and plots the data.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plot_drone_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-587b8bd74754>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdrone_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSSL\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_drone_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mplot_drone_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdrone_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'plot_drone_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "%matplotlib inline\n",
+    "import SSL_drone_data as SSL\n",
+    "\n",
+    "drone_data = SSL.get_drone_data()\n",
+    "SSL.plot_drone_data(drone_data)"
    ]
   },
   {
