Finshed v1 of the notebook

--- a/Self-supervised learning.ipynb
+++ b/Self-supervised learning.ipynb
@@ -55,7 +55,9 @@
     "\n",
     "However, in this SSL case study, we will assume that we only know of the sonar what its relation is to height in meters. We will then try to learn to predict the sonar measurements by means of pressure measurements. After learning, the drone can also use the barometer for height estimation. What is special about this case study is that, in contrast to most work on SSL, we will fuse the height estimate from the barometer back with the sonar measurement and see whether the fused estimate is better than sonar alone. In order to determine which is better, we compare the fused estimates with highly accurate motion tracking system estimates (in our case Optitrack). The overview of the learning setup is shown in Figure 3.\n",
     "\n",
-    "<IMG SRC=\"overview_fusion.png\" WIDTH=\"70%\"></IMG>\n",
+    "<IMG SRC=\"overview_fusion.png\" WIDTH=\"60%\"></IMG>\n",
+    "\n",
+    "<CENTER> <I>Figure 3:</I> Overview of the self-supervised learning fusion setup studied in [3] and this notebook. </CENTER>\n",
     "\n",
     "<FONT COLOR=\"red\">Exercise 1.</FONT>\n",
     "\n",
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +79,7 @@
        "Text(0, 0.5, 'Pressure [Pa]')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -142,9 +144,15 @@
     "\n",
     "$\\hat{t} = \\frac{\\sigma_2^2 x_1 + \\sigma_1^2 x_2}{\\sigma_1^2 + \\sigma_2^2 + \\sigma_t^2}$,\n",
     "\n",
-    "as shown in, e.g., [4].\n",
+    "as shown in, e.g., [4]. The figure below shows a model (a), which corresponds to such a typical setting, in which we assume we know the distributions of $t$, $x_1$ and $x_2$. We want to estimate the unknown, latent variable $t$, which is hence grey in the figure. \n",
     "\n",
-    "The self-supervised learning setup is special, though. Let us assume a scenario in which the robot knows the accuracy of the sonar $x_s$, which it considers as an unbiased estimator, normally distributed around $t$ (the height). That is, the robot knows $\\sigma_s^2$. The robot neither knows the distribution of $t$, nor knows anything about the pressure $p$. However, it will try to map $p$ to $x_s$, which it will assume to result in a similarly unbiased estimator, $x_p$, which is normally distributed around $t$. Of course, the robot does not know $t$, so it will have to estimate the accuracy of $x_p$ (its variance around $t$) by measuring its variance around the sonar value $x_s$, $\\sigma_p^2$."
+    "<IMG SRC=\"model.png\" WIDTH=\"60%\"></IMG>\n",
+    "\n",
+    "<CENTER> <I>Figure 4:</I> Probabilistic models underlying the self-supervised learning fusion setup studied in [3] and this notebook. (a) Typical model in which the robot 'knows' all distributions and has to estimate the latent variable $t$ (in grey). (b) The model from the robot's viewpoint, showing its lack of knowledge. The dashed lines indicate that the robot does not know the distributions of $t$ and $P$. (c) The robot will assume it does know the distribution of the learned cue $x_p$, so that it can be fused with $x_s$.</CENTER>\n",
+    "\n",
+    "The self-supervised learning setup is special, though. Let us assume a scenario in which the robot knows the accuracy of the sonar $x_s$, which it considers as an unbiased estimator, normally distributed around $t$ (the height). That is, the robot knows $\\sigma_s^2$. The robot neither knows the distribution of $t$, nor knows anything about the pressure $P$. This situation is illustrated in part (b) of the figure above, where dashed lines indicate the absence of knowledge about the distribution. \n",
+    "\n",
+    "Still, the robot will try to map $P$ to $x_s$, which it will assume to result in an unbiased estimator, $x_p$, which is also normally distributed around $t$, as illustrated in part (c) of the figure. Of course, the robot does not know $t$. It will estimate the accuracy of $x_p$ (its variance around $t$) by measuring its variance around the sonar value $x_s$, $\\sigma_p^2$."
    ]
   },
   {
@@ -155,7 +163,7 @@
     "\n",
     "1. Below you will find code to learn a mapping from pressure measurements $p$ to sonar measurements $x_s$. It also shows the distribution of $x_p$ around $x_s$. Please write the code to estimate the variance $\\sigma_p^2$ and fuse $x_s$ and $x_p$. Is the fused estimate better than $x_s$ alone?\n",
     "\n",
-    "2. Also make the code to fuse the measurements with a priori knowledge of $\\sigma_p^2$, based on the variance observed in the training set. Is the result better than the fusion performed after self-supervised learning? Why? Can you still make a better estimate by introducing the a priori known $\\sigma_t^2$?"
+    "2. Also make the code to fuse the measurements with a priori knowledge of $\\sigma_p^2$, based on the variance observed in the training set. Is the result better than the fusion performed after self-supervised learning? Why? Can you still make a better estimate by introducing the a priori known $\\sigma_t^2$? If yes, why? If not, why not?"
    ]
   },
   {
@@ -234,12 +242,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Conditions for when fusion is useful in self-supervised learning\n",
+    "In [3], it is studied when fusion of the primary sensor cue and learned sensor cue is useful in self-supervised learning. Besides studying it empirically in a petridish experiment (as you have done above), the conditions under which fusion gives better results was also studied theoretically. Here we will keep using the notation as above, with $P$ and $s$, but the analysis is no longer specific for sonar and pressure measurements. For the model in figure 4, with $t \\sim \\mathcal{N}(0, \\sigma_t^2)$, $P \\sim \\mathcal{N}(t, \\sigma_p^2)$, and $x_s \\sim \\mathcal{N}(t, \\sigma_s^2)$, and assuming that we use linear regression for learning the mapping $f(P) = x_s$, we can derive closed-form equations under which conditions the fused estimate is better than $x_s$ alone. \n",
+    "\n",
+    "The resulting equations are rather lengthy, and can be found in [3]. In short, there are two conditions under which SSL fusion is beneficial. First, the fused estimate is better when $t$ has a strong prior. To understand this case, think of the fact that the machine learning method will actually take the prior into account when learning the mapping $f$: If $x_s$ is often close to 0 since $t$ is often close to 0, the learned mapping will exploit this bias in the data, while using only $x_s$ itself will not. Second, the fused estimate is better when the learned cue is 'sufficiently' informative, i.e., $\\sigma_p$ has to be sufficiently small compared to $\\sigma_s$. 'Sufficient' is not too restrictive, e.g., in a case studied in [3] where $\\sigma_s^2=1$, $\\sigma_p^2$ was allowed to be $11.57 \\times$ as large."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## References\n",
     "[1] Thrun, S., Montemerlo, M., Dahlkamp, H., Stavens, D., Aron, A., Diebel, J., ... & Lau, K. (2006). Stanley: The robot that won the DARPA Grand Challenge. Journal of field Robotics, 23(9), 661-692.\n",
     "\n",
     "[2] Garg, R., BG, V. K., Carneiro, G., & Reid, I. (2016, October). Unsupervised cnn for single view depth estimation: Geometry to the rescue. In European Conference on Computer Vision (pp. 740-756). Springer, Cham.\n",
     "\n",
-    "[3] de Croon, G. C. H. E. (2017). Self-supervised learning: When is fusion of the primary and secondary sensor cue useful?. arXiv preprint arXiv:1709.08126.\n",
+    "[3] de Croon, G. C. H. E. (2017). Self-supervised learning: When is fusion of the primary and secondary sensor cue useful?. <A HREF=\"https://arxiv.org/abs/1709.08126\" TARGET=\"_blank\">arXiv preprint arXiv:1709.08126</A>. \n",
     "\n",
     "[4] C.M. Bishop. Pattern recognition and machine learning. Springer Science and Business Media, LLC, New York, NY, 2006."
    ]
